--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "author": "Storify <dev@storify.com>",
-  "name": "jade-browser",
-  "description": "express/connect middleware that serves jade compiled templates to the browser",
-  "version": "0.0.9",
+  "name": "jadeBrowser",
+  "description": "express/connect middleware that serves jade compiled templates to the browser modified to enable recompile the jade files when I change them",
+  "version": "0.0.1",
   "repository": {
-    "url": "https://github.com/storify/jade-browser/"
+    "url": "https://github.com/NeCkEr/jade-browser.git"
   },
   "main": "./index.js",
   "engines": {
